fix(server): a review's checkout is source, not screenshots
The repository snapshot staged for a review has a 32 MB bound, and the
walk spends it in path order on whatever it meets. On ls1intum/Artemis
that is `documentation/`: the snapshot stopped after 627 files, all of
them images, and every review of that repository ran with no source file
at all — 684 staged artifacts, none of them code, against 9,760 source
files in the tree.

The walk now skips a blob whose opening bytes contain a NUL, git's own
test for binary content, and names the omission in the capture. On the
same repository the bound then reaches roughly 5,900 files, covering the
whole Java tree the reviews are about.

Verified with GitRepositoryManagerTest, including a new case for an
image sorted ahead of a source file, and the unit tier.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GZzUtPvAhEnBHsxqWTaRHn