@@ -672,6 +672,42 @@ class GitRepositoryManagerTest extends BaseUnitTest {
         }
 
         @Test
+        @DisplayName("a screenshot does not spend the budget the surrounding source is bought with")
+        void shouldStageSourceRatherThanBinaries() throws Exception {
+            manager = createManager(true);
+            try (Git sourceGit = createSourceRepo()) {
+                // Sorted before the source file, as a documentation image is in a real repository, and
+                // large enough that staging it would leave nothing for what follows.
+                Path image = sourceRepoPath.resolve("docs-screenshot.png");
+                byte[] png = new byte[64 * 1024];
+                png[0] = (byte) 0x89;
+                png[1] = 'P';
+                png[2] = 'N';
+                png[3] = 'G';
+                png[8] = 0; // the NUL that makes it binary
+                Files.write(image, png);
+                Path source = sourceRepoPath.resolve("service.java");
+                Files.writeString(source, "class Service {}\n");
+                sourceGit.add().addFilepattern(".").call();
+                sourceGit
+                        .commit()
+                        .setSign(false)
+                        .setMessage("Add documentation image and source")
+                        .setAuthor(new PersonIdent("Test Author", "author@test.com"))
+                        .setCommitter(new PersonIdent("Test Committer", "committer@test.com"))
+                        .call();
+                String headSha = sourceGit.log().call().iterator().next().getName();
+                manager.ensureRepository(1L, sourceRepoPath.toUri().toString(), null);
+
+                try (var snapshot = manager.readTreeSnapshot(1L, headSha)) {
+                    assertThat(snapshot.files()).containsKey("service.java").doesNotContainKey("docs-screenshot.png");
+                    // The manifest still says what the review could not have been shown.
+                    assertThat(snapshot.limitations()).contains(GitRepositoryManager.TREE_LIMITATION_BINARY);
+                }
+            }
+        }
+
+        @Test
         void shouldRecordTheResolvedCommitIdentity() throws Exception {
             manager = createManager(true);
             try (Git sourceGit = createSourceRepo()) {
@@ -802,7 +838,9 @@ class GitRepositoryManagerTest extends BaseUnitTest {
             manager = createManager(true, 20_000, DataSize.ofKilobytes(6), DataSize.ofKilobytes(4));
             try (Git sourceGit = createSourceRepo()) {
                 for (int i = 0; i < 8; i++) {
-                    Files.write(sourceRepoPath.resolve("file" + i + ".bin"), new byte[2 * 1024]);
+                    // Text, not zeroes: a blob of NUL bytes is binary, and the bound under test here is
+                    // the size one.
+                    Files.writeString(sourceRepoPath.resolve("file" + i + ".txt"), "x".repeat(2 * 1024));
                 }
                 sourceGit.add().addFilepattern(".").call();
                 String sha = commit(sourceGit, "Add more bytes than the bound admits");
